# azure-dicom-service-emulator

./: .coverage  .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_HUB_OVERVIEW.md  Dockerfile  README.md  bandit-baseline.json  bandit.yaml  coverage.xml  docker-compose.external-db.yml  docker-compose.full.yml  docker-compose.yml  main.py  pyproject.toml  smoke_test.py  test-audit-output.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml  security.yml  tests.yml
app/: __init__.py  config.py  database.py  dependencies.py
app/models/: dicom.py  events.py
app/routers/: __init__.py  _shared.py  changefeed.py  debug.py  delete.py  dicomweb.py  extended_query_tags.py  operations.py  qido.py  stow.py  ups.py  wado.py
app/schemas/: __init__.py  changefeed.py  extended_query_tags.py  operations.py  qido.py  stow.py
app/services/: accept_validation.py  dicom_engine.py  dicom_parse_worker.py  expiry.py  frame_cache.py  frame_extraction.py  image_rendering.py  multipart.py  search_utils.py  ups_state_machine.py  upsert.py
docs/: bugfix-2026-02-17-summary.md  bugfix-storage-path-investigation.md  phase1-completion.md  phase2-completion.md  test-audit.md  troubleshooting.md
docs/integration/: csharp-client.md  python-client.md
docs/plans/: 2026-02-14-project-setup-design.md  2026-02-14-project-setup.md  2026-02-15-azure-parity-features-design.md  2026-02-15-comprehensive-testing-strategy-design.md  2026-02-15-phase1-event-system.md  2026-02-15-phase2-wado-rs-enhancements.md  2026-02-15-phase3-stow-rs-enhancements.md  2026-02-15-phase4-qido-rs-enhancements.md  2026-02-15-phase5-tasks-5-9.md  2026-02-15-phase5-ups-rs-worklist.md  2026-02-15-testing-phase1-foundation.md  2026-02-15-testing-phase2-integration.md  2026-02-17-bugfix-comprehensive.md  2026-02-17-bugfix-phase2-issues.md  2026-04-10-docker-best-practices.md  2026-04-10-unit-test-coverage-design.md  2026-04-10-unit-test-coverage.md  2026-05-05-stow_performance_review.md  2026-05-05-stow_performance_round_2.md
docs/verification/: phase2-wado-rs.md
tests/: README.md  __init__.py  conftest.py  test_expiry.py  test_expiry_integration.py  test_expiry_schema.py  test_fixtures_work.py  test_frame_cache.py  test_frame_extraction.py  test_image_rendering.py  test_put_stow.py  test_qido_fuzzy.py  test_qido_fuzzy_smoke.py  test_qido_uid_list.py  test_qido_uid_list_integration.py  test_qido_wildcard.py  test_qido_wildcard_integration.py  test_search_utils.py  test_stow_rollback.py  test_ups_cancel.py  test_ups_create.py  test_ups_retrieve.py  test_ups_search.py  test_ups_state.py  test_ups_state_machine.py  test_ups_subscriptions.py  test_ups_update.py  test_upsert.py  test_wado_rs_frames.py  test_wado_rs_rendered.py  test_workitem_model.py
(+120 files in other folders)
