[project]
name = "azure-dicom-service-emulator"
version = "0.1.0"
description = "Local emulator for Azure Health Data Services DICOM Service"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Rob", email = "rob@kostlabs.com"}
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydicom>=3.0.1",
    "httpx>=0.28.0",
    "azure-storage-queue>=12.11.0",
    "pillow>=11.0.0",
    "pillow-jpls>=1.0.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0.2",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    # Existing
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",

    # Coverage & Reporting
    "pytest-cov>=4.1.0",
    "coverage[toml]>=7.4.0",

    # Performance Testing
    "pytest-benchmark>=4.0.0",
    "locust>=2.20.0",

    # Security
    "bandit>=1.7.6",
    "safety>=3.0.0",

    # Test Execution
    "pytest-xdist>=3.5.0",
    "pytest-html>=4.1.0",

    # Test Data
    "faker>=22.0.0",
    "factory-boy>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests for services, models, utilities",
    "integration: Integration tests for API endpoints",
    "e2e: End-to-end workflow tests",
    "slow: Tests that take longer than 1 second",
    "security: Security and penetration tests",
]
